# MARLIN

./: .gitignore  LICENSE  README.md  requirements.txt
marlin_ros2_ws/src/cmd_listener/: package.xml  setup.cfg  setup.py
marlin_ros2_ws/src/cmd_listener/cmd_listener/: listener.py
marlin_ros2_ws/src/cmd_listener/launch/: run_listener.launch.py
src/llms/: gen_llm_comparison.py  gen_scenario_llm_perf.py  llm_move_gen.py  llm_negotiation.py  llm_primitives.py
src/marl/: centralised_critic.py  common_marl.py  corridor_env.py  llm_action_dict.py  llm_marl_critic.py  llm_stochastic_sampling.py  marl_critic.py  marl_no_critic.py  meta_info.py
src/utils/: grid.py  movement.py  scenarios.py  utils.py
