<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cmd_listener</name>
    <version>0.0.1</version>
    <description>Listener for a Hybrid MARL PoC</description>
    <maintainer email="t.godfrey@soton.ac.uk">toby</maintainer>
    <license>TODO: License declaration</license>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>

    <exec_depend>ros2launch</exec_depend>

</package>
